--- a/doc/device.dox
+++ b/doc/device.dox
@@ -1,10 +1,10 @@
 /**
-@brief hipRAND Device API Module.
-@author 
+@brief rocRAND Device API Module.
+@author
 @file
 */
 
 /**
- *  @defgroup device Device API
- *  
+ *  @defgroup device rocRAND device functions
+ *
  */
