Remove rocRAND from docs
rocRAND docs are no longer generated. In order to
generate rocRAND docs redefine rocrand_internal alias
in docs/Doxyfile or enable internal docs.

--- a/doc/hipranddevice.dox
+++ b/doc/hipranddevice.dox
@@ -5,7 +5,7 @@
 */
 
 /**
- *  @defgroup hipranddevice hipRAND device functions
+ * \defgroup hipranddevice hipRAND device functions
  * @{
  *     @page page_name hipRAND RNG's state types
  *     * \p hiprandStateXORWOW_t - XORWOW PRNG state type
