--- a/doc/mainpage.dox
+++ b/doc/mainpage.dox
@@ -1,22 +1,21 @@
 /**
-@brief hipRAND main page.
-@author 
+@brief The hipRAND project main page.
+@author
 @file
 */
 
 /**
 @mainpage hipRAND Documentation
- 
+
 @section overview Overview
 
-The hipRAND library provides functions that generate pseudo-random and quasi-random numbers.
-The library is implemented in the HIP
-programming language, optimised for AMD's latest discrete GPUs. It is designed to run on top
-of AMD's Radeon Open Compute ROCm runtime, but it also works
-on CUDA enabled GPUs.
+The hipRAND project provides functions that generate pseudo-random and quasi-random numbers.
 
-Additionally, hipRAND includes a small wrapper library which allows user to easily port CUDA
-applications that use cuRAND library to the HIP
-layer.
+The rocRAND library is implemented in the HIP programming language and optimised
+for AMD's latest discrete GPUs. It is designed to run on top of AMD's Radeon Open Compute ROCm
+runtime, but it also works on CUDA enabled GPUs.
+The hipRAND works as wrapper library which allows user to easily port CUDA applications
+that use cuRAND library to the HIP layer. In ROCm environment hipRAND uses rocRAND, however
+in CUDA environment cuRAND is used instead.
 
 */
