--- a/doc/mainpage.dox
+++ b/doc/mainpage.dox
@@ -1,21 +1,23 @@
 /**
-@brief The hipRAND project main page.
+@brief The rocRAND project main page.
 @author
 @file
 */
 
 /**
-@mainpage hipRAND Documentation
+@mainpage rocRAND Documentation
 
 @section overview Overview
 
-The hipRAND project provides functions that generate pseudo-random and quasi-random numbers.
+The rocRAND project provides functions that generate pseudo-random and quasi-random numbers.
 
-The rocRAND library is implemented in the HIP programming language and optimised
-for AMD's latest discrete GPUs. It is designed to run on top of AMD's Radeon Open Compute ROCm
-runtime, but it also works on CUDA enabled GPUs.
-The hipRAND works as wrapper library which allows user to easily port CUDA applications
-that use cuRAND library to the HIP layer. In ROCm environment hipRAND uses rocRAND, however
-in CUDA environment cuRAND is used instead.
+The rocRAND library is implemented in the [HIP](https://github.com/ROCm-Developer-Tools/HIP)
+programming language and optimised for AMD's latest discrete GPUs. It is designed to run on top
+of AMD's Radeon Open Compute [ROCm](https://rocm.github.io/) runtime, but it also works on
+CUDA enabled GPUs.
+Additonaly, the project includes a wrapper library called hipRAND which allows user to easily port
+CUDA applications that use cuRAND library to the [HIP](https://github.com/ROCm-Developer-Tools/HIP)
+layer. In [ROCm](https://rocm.github.io/) environment hipRAND uses rocRAND, however in CUDA
+environment cuRAND is used instead.
 
 */
