--- a/install
+++ b/install
@@ -132,6 +132,9 @@ else
     cmake_executable="cmake"
 fi
 
+if($build_clients); then
+    clients=" -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON "
+fi
 if [[ "${build_relocatable}" == true ]]; then
     CXX=${rocm_path}/bin/$compiler ${cmake_executable}  -DCMAKE_INSTALL_PREFIX="${rocm_path}" \
     -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_CRUSH_TEST=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON \
@@ -141,7 +144,7 @@ if [[ "${build_relocatable}" == true ]]; then
     -DCMAKE_MODULE_PATH="${rocm_path}/hip/cmake" \
     ../../. # or cmake-gui ../.
 else
-    CXX=${rocm_path}/bin/$compiler ${cmake_executable}  -DBUILD_BENCHMARK=ON ../../. # or cmake-gui ../.
+    CXX=${rocm_path}/bin/$compiler ${cmake_executable} ${clients} ../../. # or cmake-gui ../.
 fi
 
 # Build
