--- a/install
+++ b/install
@@ -52,6 +52,12 @@ fi
 
 eval set -- "${GETOPT_PARSE}"
 
+check_exit_code( )
+{
+    if (( $? != 0 )); then
+	exit $?
+    fi
+}
 
 while true; do
     case "${1}" in
@@ -149,6 +155,7 @@ fi
 
 # Build
 make -j$(nproc)
+check_exit_code
 
 if ($run_tests); then
 # Optionally, run tests if they're enabled.
@@ -156,11 +163,13 @@ ctest --output-on-failure
 fi
 
 if ($install_package); then
-# Install
-make install
+    # Install
+    make install
+    check_exit_code    
 fi
 
 if ($build_package); then
-# Install
-make package -j$(nproc)
+    # Package
+    make package -j$(nproc)
+    check_exit_code
 fi
