Changing install script to default to hipcc compiler

--- a/install
+++ b/install
@@ -123,14 +123,11 @@ fi
 #   BUILD_BENCHMARK - off by default.
 #
 # ! IMPORTANT !
-# On ROCm platform set C++ compiler to HCC. You can do it by adding 'CXX=<path-to-hcc>'
-# before 'cmake' or setting cmake option 'CMAKE_CXX_COMPILER' to path to the HCC compiler.
+# On ROCm platform set C++ compiler to HIPCC. You can do it by adding 'CXX=<path-to-hcc>'
+# before 'cmake' or setting cmake option 'CMAKE_CXX_COMPILER' to path to the HIPCC compiler.
 #
 
 compiler="hcc"
-if ($build_hip_clang); then
-    compiler="hipcc"
-fi
 
 if [ -e /etc/redhat-release ] ; then
     cmake_executable="cmake3"
