changing to hipcc

--- a/install
+++ b/install
@@ -127,7 +127,7 @@ fi
 # before 'cmake' or setting cmake option 'CMAKE_CXX_COMPILER' to path to the HIPCC compiler.
 #
 
-compiler="hcc"
+compiler="hipcc"
 
 if [ -e /etc/redhat-release ] ; then
     cmake_executable="cmake3"
