--- a/install
+++ b/install
@@ -12,8 +12,7 @@ function display_help()
     echo "    [-i|--install] install after build"
     echo "    [-p|--package] build package"
     echo "    [-r]--relocatable] create a package to support relocatable ROCm"
-    #Not implemented yet
-    #    echo "    [-d|--dependencies] install build dependencies"
+    echo "    [-d|--dependencies] install build dependencies"
     echo "    [-c|--clients] build library clients too (combines with -i & -d)"
     echo "    [-g|--debug] -DCMAKE_BUILD_TYPE=Debug (default is =Release)"
     echo "    [--hip-clang] build library for amdgpu backend using hip-clang"
@@ -31,6 +30,7 @@ run_tests=false
 build_hip_clang=false
 rocm_path=/opt/rocm
 build_relocatable=false
+install_dependencies=false
 
 # #################################################
 # Parameter parsing
@@ -39,7 +39,7 @@ build_relocatable=false
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-    GETOPT_PARSE=$(getopt --name "${0}" --longoptions help,install,clients,debug,hip-clang,test,package,relocatable --options hicdtpr -- "$@")
+    GETOPT_PARSE=$(getopt --name "${0}" --longoptions help,install,clients,debug,hip-clang,test,package,relocatable,dependencies --options hicgtprd -- "$@")
 else
     echo "Need a new version of getopt"
     exit 1
@@ -71,9 +71,12 @@ while true; do
 	-p|--package)
 	    build_package=true
 	    shift ;;
-        -r|--relocatable)
-            build_relocatable=true
-            shift ;;
+    -r|--relocatable)
+        build_relocatable=true
+        shift ;;
+    -d|--dependencies)
+        install_dependencies=true
+        shift ;;
 	-c|--clients)
 	    build_clients=true
 	    shift ;;
@@ -117,6 +120,13 @@ else
     mkdir -p debug; cd debug
 fi
 
+# build type
+if [[ "${build_release}" == true ]]; then
+    cmake_common_options="${cmake_common_options} -DCMAKE_BUILD_TYPE=Release"
+else
+    cmake_common_options="${cmake_common_options} -DCMAKE_BUILD_TYPE=Debug"
+fi
+
 # Configure hipCUB, setup options for your system.
 # Build options:
 #   BUILD_TEST - on by default,
@@ -138,16 +148,21 @@ fi
 if($build_clients); then
     clients=" -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON "
 fi
+
+if($install_dependencies); then
+cmake_common_options="${cmake_common_options} -DDEPENDENCIES_FORCE_DOWNLOAD=ON"
+fi
+
 if [[ "${build_relocatable}" == true ]]; then
     CXX=${rocm_path}/bin/$compiler ${cmake_executable}  -DCMAKE_INSTALL_PREFIX="${rocm_path}" \
-    -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_CRUSH_TEST=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON \
+    -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_CRUSH_TEST=ON ${cmake_common_options} \
     -DCMAKE_PREFIX_PATH="${rocm_path} ${rocm_path}/hcc ${rocm_path}/hip" \
     -DCMAKE_SHARED_LINKER_FLAGS="${rocm_rpath}" \
     -DROCM_DISABLE_LDCONFIG=ON \
     -DCMAKE_MODULE_PATH="${rocm_path}/hip/cmake" \
     ../../. # or cmake-gui ../.
 else
-    CXX=${rocm_path}/bin/$compiler ${cmake_executable} ${clients} ../../. # or cmake-gui ../.
+    CXX=${rocm_path}/bin/$compiler ${cmake_executable} ${clients} ${cmake_common_options} ../../. # or cmake-gui ../.
 fi
 check_exit_code "$?"
 
@@ -163,7 +178,7 @@ fi
 if ($install_package); then
     # Install
     make install
-    check_exit_code "$?"    
+    check_exit_code "$?"
 fi
 
 if ($build_package); then
