--- a/install
+++ b/install
@@ -185,7 +185,7 @@ if [[ "${build_relocatable}" == true ]]; then
     -DCMAKE_PREFIX_PATH="${rocm_path} ${rocm_path}/hcc ${rocm_path}/hip" \
     -DCMAKE_SHARED_LINKER_FLAGS="${rocm_rpath}" \
     -DROCM_DISABLE_LDCONFIG=ON \
-    -DCMAKE_MODULE_PATH="${rocm_path}/hip/cmake" \
+    -DCMAKE_MODULE_PATH="${rocm_path}/lib/cmake/hip ${rocm_path}/hip/cmake" \
     ../../. # or cmake-gui ../.
 else
     CXX=${rocm_path}/bin/$compiler ${cmake_executable} ${clients} ${cmake_common_options} ../../. # or cmake-gui ../.
