--- a/install
+++ b/install
@@ -17,7 +17,6 @@ function display_help()
     echo "    [-g|--debug] -DCMAKE_BUILD_TYPE=Debug (default is =Release)"
     echo "    [--hip-clang] build library for amdgpu backend using hip-clang"
     echo "    [--address-sanitizer] build with address sanitizer enabled"
-    echo "    [--no-hiprand] build without integrated hipRAND"
 }
 
 
@@ -34,7 +33,6 @@ rocm_path=/opt/rocm
 build_relocatable=false
 install_dependencies=false
 build_address_sanitizer=false
-no_hiprand=false
 build_freorg_bkwdcomp=true
 
 # #################################################
@@ -44,7 +42,7 @@ build_freorg_bkwdcomp=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-    GETOPT_PARSE=$(getopt --name "${0}" --longoptions help,install,clients,debug,hip-clang,test,package,relocatable,dependencies,address-sanitizer,no-hiprand,rm-legacy-include-dir --options hicgtprd -- "$@")
+    GETOPT_PARSE=$(getopt --name "${0}" --longoptions help,install,clients,debug,hip-clang,test,package,relocatable,dependencies,address-sanitizer,rm-legacy-include-dir --options hicgtprd -- "$@")
 else
     echo "Need a new version of getopt"
     exit 1
@@ -96,9 +94,6 @@ while true; do
         shift ;;
     --address-sanitizer)
         build_address_sanitizer=true
-        shift ;;
-    --no-hiprand)
-        no_hiprand=true
         shift ;;
     --rm-legacy-include-dir)
         build_freorg_bkwdcomp=false
@@ -165,12 +160,6 @@ fi
 
 if ($install_dependencies); then
     cmake_common_options="${cmake_common_options} -DDEPENDENCIES_FORCE_DOWNLOAD=ON"
-fi
-
-if ($no_hiprand); then
-    cmake_common_options="${cmake_common_options} -DBUILD_HIPRAND=OFF"
-elif ! [ -f "../../hipRAND/CMakeLists.txt" ]; then
-    git submodule update --init --force
 fi
 
 if ($build_freorg_bkwdcomp); then
