--- a/install
+++ b/install
@@ -142,11 +142,10 @@ fi
 #   BUILD_BENCHMARK - off by default.
 #
 # ! IMPORTANT !
-# On ROCm platform set C++ compiler to HIPCC. You can do it by adding 'CXX=<path-to-hipcc>'
-# before 'cmake' or setting cmake option 'CMAKE_CXX_COMPILER' to path to the HIPCC compiler.
+# On ROCm platform set C++ compiler to clang++ >= 17. You can do it by adding 'CXX=<path-to-clang>'
+# before 'cmake' or setting cmake option 'CMAKE_CXX_COMPILER' to path to the clang++ compiler.
 #
 
-compiler="amdclang++"
 cmake_common_options="${cmake_common_options} --toolchain=toolchain-linux.cmake"
 
 cmake_executable="cmake"
@@ -170,7 +169,7 @@ else
 fi
 
 if [[ "${build_relocatable}" == true ]]; then
-    CXX=${rocm_path}/bin/$compiler ${cmake_executable}  -DCMAKE_INSTALL_PREFIX="${rocm_path}" \
+    ${cmake_executable}  -DCMAKE_INSTALL_PREFIX="${rocm_path}" \
     -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON ${cmake_common_options} \
     -DCMAKE_PREFIX_PATH="${rocm_path};${rocm_path}/hip" \
     -DCMAKE_SHARED_LINKER_FLAGS="${rocm_rpath}" \
@@ -178,7 +177,7 @@ if [[ "${build_relocatable}" == true ]]; then
     -DCMAKE_MODULE_PATH="${rocm_path}/lib/cmake/hip;${rocm_path}/hip/cmake" \
     ../../. # or cmake-gui ../.
 else
-    CXX=${rocm_path}/bin/$compiler ${cmake_executable} ${clients} ${cmake_common_options} ../../. # or cmake-gui ../.
+    ${cmake_executable} ${clients} ${cmake_common_options} ../../. # or cmake-gui ../.
 fi
 check_exit_code "$?"
 
