--- a/docs/mainpage.dox
+++ b/docs/mainpage.dox
@@ -12,7 +12,7 @@
 The rocRAND project provides functions that generate pseudo-random and quasi-random numbers.
 
 The rocRAND library is implemented in the [HIP](https://github.com/ROCm-Developer-Tools/HIP)
-programming language and optimised for AMD's latest discrete GPUs. It is designed to run on top
-of AMD's Radeon Open Compute [ROCm](https://rocm.github.io/) runtime, but it also works on
-CUDA enabled GPUs.
+programming language and optimized for AMD's latest discrete GPUs. It is designed to run on top
+of AMD's [ROCm](https://rocm.docs.amd.com/en/latest/) runtime, but it also works on CUDA enabled
+GPUs.
 */
